--- a/curry_library/hc_curry_library/src/main/AndroidManifest.xml
+++ b/curry_library/hc_curry_library/src/main/AndroidManifest.xml
@@ -1,10 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hc_curry_library">
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:name=".MyApplication"
         android:supportsRtl="true">
+
+
+
+
 
     </application>
 
